--- a/android_fundamentals/AF04_5HomeWork/app/src/main/AndroidManifest.xml
+++ b/android_fundamentals/AF04_5HomeWork/app/src/main/AndroidManifest.xml
@@ -16,7 +16,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ShowRecipeActivity"></activity>
+        <activity
+            android:theme="@style/ActionBarTheme"
+            android:label="Recipe"
+            android:name=".ShowRecipeActivity"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity">
+            </meta-data>
+        </activity>
     </application>
 
 </manifest>
